--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="col-md-4 status">
                   <h5>$<span id="sub-total">1,278</span></h5>
                   <h5>$<span id="tax-total">0</span></h5>
-                  <h5>$<span id="total-amount">1,278</span></h5>
+                  <h5>$<span id="grand-total">1,278</span></h5>
                 </div>
               </div>
             </div>
